# vesuvius-topo

./: README.md  make_tiles.py  pyproject.toml  screen-summary.json  screen.py  skills-lock.json  texture-screen.json  tiles.json  unwrap_top.py
artifacts/: mesh-surface-large.anchors.npy  mesh-surface-large.npz  mesh-surface.anchors.npy  mesh-surface.npz  surface_confidence.tif  surface_normals.tif  surface_valid.tif  surface_xyz.tif  surface_xyz_confidence.tif  surface_xyz_confidence_valid.tif
artifacts/render/: surface.ply  surface_layers.tif  unwrapped_ct.tif
ink_renders/p4_benchmark/: p4_benchmark_summary.json
notebooks/: vesuvius-challenge-ssms.py  workflow.py
src/vesuvius_ssm/: __init__.py  cli.py  dataset.py  geometry.py  mesh.py  model.py  render.py  rollout.py  search.py  topology.py  training.py  types.py  volume.py
tests/: test_mesh.py  test_pipeline.py  test_search.py  test_topology.py
